更新工具库

--- a/template/project/package.json
+++ b/template/project/package.json
@@ -53,6 +53,7 @@
     "moment": "^2.25.3",
     "omit.js": "^2.0.2",
     "path-to-regexp": "2.4.0",
+    "phinney-toolkit": "1.0.7",
     "qs": "^6.9.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
