--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "react-environment-setup",
-  "version": "1.0.11",
+  "version": "1.0.12",
   "description": "react-environment-setup",
   "main": "init.js",
   "scripts": {
-    "test": "node init"
+    "test": "node init",
+    "prepublish": "version update"
   },
   "repository": {
     "type": "git",
@@ -27,6 +28,7 @@
   "dependencies": {
     "ansi-colors": "^4.1.1",
     "inquirer": "^7.3.3",
+    "package-version-update": "^1.0.3",
     "request": "^2.88.2"
   }
 }
