--- a/template/project/tsconfig.json
+++ b/template/project/tsconfig.json
@@ -6,7 +6,7 @@
     "lib": ["esnext", "dom"],
     "sourceMap": true,
     "baseUrl": ".",
-    "jsx": "react",
+    "jsx": "preserve",
     "allowSyntheticDefaultImports": true,
     "moduleResolution": "node",
     "forceConsistentCasingInFileNames": true,
@@ -23,6 +23,7 @@
     }
   },
   "include": [
+    "mock/**/*",
     "src/**/*",
     "tests/**/*",
     "test/**/*",
@@ -32,7 +33,8 @@
     ".eslintrc.js",
     ".stylelintrc.js",
     ".prettierrc.js",
-    "jest.config.js"
+    "jest.config.js",
+    "mock/*"
   ],
   "exclude": ["node_modules", "build", "dist", "scripts", "src/.umi/*", "webpack", "jest"]
 }
